[package]
name = "nexus-cli"
version = "0.1.0"
edition = "2021"
description = "Knowledge graph intelligence engine - TUI dashboard"

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
nexus-core = { path = "../nexus-core" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
